Fix title on Gary's langing page

--- a/website/templates/smcap.html
+++ b/website/templates/smcap.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Small-Mid Cap Fund</title>
+  <title>Small & SMID Cap Strategies</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
   
@@ -47,7 +47,7 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo mr-auto"><a href="index.html">The Small & SMID Cap Fund</a></h1>
+      <h1 class="logo mr-auto"><a href="index.html">The Small & SMID Cap Strategies</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
