Consistently italicized paragraphs on all three pages

--- a/website/templates/africafund.html
+++ b/website/templates/africafund.html
@@ -156,9 +156,9 @@
             </p>
             <p>
               <ol type="I">
-                <li>A dramatically improved Regulatory and Business Environment that is promoting creative destruction and unleashing humankind’s entrepreneurial spirit.<br></li>
-                <li>An Emerging Middle Class supported by Education, Industrialization, Demographics and Urbanization.<br></li>
-                <li>A Lollapalooza Effect propelled by mobile phone penetration and rising internet use which are driving digital innovation in Agtech, Edtech, Fintech, Healthcare, Enterprise Software, Retail and Government.<br><br></li>
+                <li class="font-italic">A dramatically improved Regulatory and Business Environment that is promoting creative destruction and unleashing humankind’s entrepreneurial spirit.<br></li>
+                <li class="font-italic">An Emerging Middle Class supported by Education, Industrialization, Demographics and Urbanization.<br></li>
+                <li class="font-italic">A Lollapalooza Effect propelled by mobile phone penetration and rising internet use which are driving digital innovation in Agtech, Edtech, Fintech, Healthcare, Enterprise Software, Retail and Government.<br><br></li>
               </ol>
             </p>
           </div>
@@ -175,14 +175,14 @@
           <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="150">
             <div class="box">
               <h4>Our Investment in Paga</h4>
-                <p>Our Direct Investment in Paga  is helping expand financial inclusion in Nigeria. Learn more <a href="https://www.mypaga.com/" target="blank">here</a>.</p>
+                <p class="font-italic">Our Direct Investment in Paga  is helping expand financial inclusion in Nigeria. Learn more <a href="https://www.mypaga.com/" target="blank">here</a>.</p>
             </div>
           </div>
 
           <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="150">
             <div class="box">
               <h4>Recommendation To Policymakers</h4>
-                <p>
+                <p class="font-italic">
                   Read our recommendation to policymakers on share repurchase regulations in Kenya <a href="{% static 'website/pdfs/recommendations.pdf' %}" target="blank">here</a>.
                 </p>
             </div>
@@ -191,7 +191,7 @@
           <div class="col-lg-4" data-aos="fade-up">
             <div class="box">
               <h4>Interview with MOI Global</h4>
-                <p>
+                <p class="font-italic">
                   Listen to Fred Steiner’s interview with John Mihaljevic and MOI Global sponsored by The Zurich Project <a href=" https://moiglobal.com/zppod-fred-steiner-2020/" target="_blank">here</a>.
                 </p>
             </div>
@@ -228,7 +228,7 @@
         <div class="section-title">
           <span>Did You Know?</span>
           <h2>Did You Know?</h2>
-          <p>Here are a few facts on the continent</p>
+          <p class="font-italic">Here are a few facts on the continent</p>
         </div>
         
         <div class="row">
@@ -236,7 +236,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-building"></i></div>
               <h4>High-growth Cities</h4>
-              <p>Africa has 86 of the 100 world’s fastest  growing cities<a href="https://qz.com/africa/1486093/africas-fast-growing-cities-face-extreme-climate-change-risk/" target="_blank"><sup>1</sup></a>, has as many 1 million+ people cities as Europe<a href="https://www.un.org/en/events/citiesday/assets/pdf/the_worlds_cities_in_2018_data_booklet.pdf" target="_blank"><sup>2</sup></a> and is home to the world’s fastest growing middle-class<a href="https://www.afdb.org/fileadmin/uploads/afdb/Documents/Publications/Tracking_Africa%E2%80%99s_Progress_in_Figures.pdf" target="_blank"><sup>3</sup></a></p>
+              <p class="font-italic">Africa has 86 of the 100 world’s fastest  growing cities<a href="https://qz.com/africa/1486093/africas-fast-growing-cities-face-extreme-climate-change-risk/" target="_blank"><sup>1</sup></a>, has as many 1 million+ people cities as Europe<a href="https://www.un.org/en/events/citiesday/assets/pdf/the_worlds_cities_in_2018_data_booklet.pdf" target="_blank"><sup>2</sup></a> and is home to the world’s fastest growing middle-class<a href="https://www.afdb.org/fileadmin/uploads/afdb/Documents/Publications/Tracking_Africa%E2%80%99s_Progress_in_Figures.pdf" target="_blank"><sup>3</sup></a></p>
             </div>
           </div>
 
@@ -244,7 +244,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-face"></i></div>
               <h4>A Young, Vibrant Population</h4>
-              <p>60% of Africa’s population is under 25, the median age is 19 and the working-age population is expected to surpass both India and China by 2034<a href="https://www.mckinsey.com/industries/consumer-packaged-goods/our-insights/lions-still-on-the-move-growth-in-africas-consumer-sector" target="_blank"><sup>4</sup></a></p>
+              <p class="font-italic">60% of Africa’s population is under 25, the median age is 19 and the working-age population is expected to surpass both India and China by 2034<a href="https://www.mckinsey.com/industries/consumer-packaged-goods/our-insights/lions-still-on-the-move-growth-in-africas-consumer-sector" target="_blank"><sup>4</sup></a></p>
             </div>
           </div>
 
@@ -252,7 +252,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-group"></i></div>
               <h4>Massive Urban Migration</h4>
-              <p>Between 2018-2025, 190 million Africans  will relocate to urban centers where per  capita consumption is 79% greater<a href="https://www.mckinsey.com/industries/consumer-packaged-goods/our-insights/lions-still-on-the-move-growth-in-africas-consumer-sector" target="_blank"><sup>5</sup></a></p>
+              <p class="font-italic">Between 2018-2025, 190 million Africans  will relocate to urban centers where per  capita consumption is 79% greater<a href="https://www.mckinsey.com/industries/consumer-packaged-goods/our-insights/lions-still-on-the-move-growth-in-africas-consumer-sector" target="_blank"><sup>5</sup></a></p>
             </div>
           </div>
 
@@ -260,7 +260,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-line-chart"></i></div>
               <h4>High Population Growth</h4>
-              <p>Today, there are ~1.25 billion Africans. By 2050, that number is projected to  increase to over 2 billion</p>
+              <p class="font-italic">Today, there are ~1.25 billion Africans. By 2050, that number is projected to  increase to over 2 billion</p>
             </div>
           </div>
 
@@ -268,7 +268,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-mobile-alt"></i></div>
               <h4>Digital Innovation</h4>
-              <p>With hundreds of millions of young, tech-savvy Africans adopting mobile handsets, Africa is leap-frogging traditional industries with novel digital products and services</p>
+              <p class="font-italic">With hundreds of millions of young, tech-savvy Africans adopting mobile handsets, Africa is leap-frogging traditional industries with novel digital products and services</p>
             </div>
           </div>
 
@@ -276,7 +276,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-wifi-2"></i></div>
               <h4>Growing Internet Penetration</h4>
-              <p>Internet penetration stands at 39% with the number of internet users in Africa growing by 40 million to 566 million as at end of 2019, up from 111 million in 2010<a href="https://www.internetworldstats.com/stats1.htm" target="_blank"><sup>6</sup></a></p>
+              <p class="font-italic">Internet penetration stands at 39% with the number of internet users in Africa growing by 40 million to 566 million as at end of 2019, up from 111 million in 2010<a href="https://www.internetworldstats.com/stats1.htm" target="_blank"><sup>6</sup></a></p>
             </div>
           </div>
 
@@ -291,7 +291,7 @@
 
         <div class="text-center">
           <h3>Fundamental Investors</h3>
-          <p> We employ traditional scuttlebutt research and fundamental analysis to discover and invest in business models built on a strong moat.</p>
+          <p class="font-italic"> We employ traditional scuttlebutt research and fundamental analysis to discover and invest in business models built on a strong moat.</p>
           <!-- button
             <a class="cta-btn" href="#">Call To Action</a>  
           -->
