--- a/website/templates/smcap.html
+++ b/website/templates/smcap.html
@@ -106,7 +106,7 @@
                 </p>
                 <br>
                 <h3>Preservation of Capital</h3>
-                <p>Our investments in great business models operating within the right-side of long-term trends serve as the primary source of capital preservation over the market cycle. This is supported in the short-run by risk-reward optimization through the use of single stock option, VIX Options and long index option overlays within our long / short strategy.</p>
+                <p class="font-italic">Our investments in great business models operating within the right-side of long-term trends serve as the primary source of capital preservation over the market cycle. This is supported in the short-run by risk-reward optimization through the use of single stock option, VIX Options and long index option overlays within our long / short strategy.</p>
               </div>
             </div>
     
