Added Prashant's profile

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -331,6 +331,10 @@
               <h4>Prashant Joshi</h4>
               <span>Trading and Risk Analyst</span>
               <p>
+                Prashant is responsible for performing risk management, trade execution, and portfolio construction as well as managing middle office and marketing operations for the BCCM Advisors’ family of portfolios.  
+                Prashant began working with BCCM Advisors in 2018. 
+                Prior to joining the hedge fund industry, Prashant has had experience working in venture capital due diligence and revenue recognition with Applied Materials and Riverbed Technologies in the Silicon Valley.
+                Prashant earned B.S. in Applied Economics and Business Management from the University of Minnesota
               </p>
               <div class="social">
                 <a href=""><i class="icofont-linkedin"></i></a>
