--- a/website/templates/africafund.html
+++ b/website/templates/africafund.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>BCCM Advisors | The Africa Fund</title>
+  <title>BCCM Advisors | The Africa Strategy</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
   
@@ -37,7 +37,7 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo mr-auto"><a href="africafund.html">The Africa Fund</a></h1>
+      <h1 class="logo mr-auto"><a href="africafund.html">The Africa Strategy</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
