--- a/website/templates/africafund.html
+++ b/website/templates/africafund.html
@@ -336,7 +336,7 @@
             <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
               <div class="member">
                 <img src="{% static 'website/img/minneapolis/fred-steiner.jpg' %}" alt="">
-                <h4>Fred Steiner, CFA</h4>
+                <h4>Managing Director, Fred Steiner, CFA</h4>
                 <span>Portfolio Manager</span>
                 <p>
                   Fred Steiner is responsible for security selection, risk management and portfolio construction for our Pan-Africa strategy. 
