--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -238,7 +238,7 @@
             <div class="member">
               <img src="{% static 'website/img/minneapolis/fred-steiner.jpg' %}" alt="">
               <h4>Fred Steiner, CFA</h4>
-              <span>Portfolio Manager</span>
+              <span>Managing Director, Portfolio Manager</span>
               <p>
                 Fred Steiner is responsible for security selection, risk management and portfolio construction for our Pan-Africa strategy. 
                 Prior to re-joining BCCM Advisors, Fred earned an MBA from the Carlson School of Management at University of Minnesota where he graduated with distinction and was a Curtis L Carlson Scholarship recipient. 
