added mugi photo

--- a/website/templates/africafund.html
+++ b/website/templates/africafund.html
@@ -312,7 +312,7 @@
           <div class="row">
             <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
               <div class="member">
-                <img src="{% static 'website/img/team/evansmugi.png' %}" alt="">
+                <img src="{% static 'website/img/africafund/evans-mugi.jpg' %}" alt="Evans Mugi">
                 <h4>Evans Mugi, CAIA</h4>
                 <span>Director, BCCM Advisors (Kenya) Limited</span>
                 <p>
@@ -335,7 +335,7 @@
 
             <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
               <div class="member">
-                <img src="{% static 'website/img/minneapolis/fred-steiner.jpg' %}" alt="">
+                <img src="{% static 'website/img/minneapolis/fred-steiner.jpg' %}" alt="Fred Steiner">
                 <h4>Managing Director, Fred Steiner, CFA</h4>
                 <span>Portfolio Manager</span>
                 <p>
