--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -177,7 +177,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
             <div class="member">
-              <img src="{% static 'website/img/minneapolis/nick-swenson.jpg' %}" alt="">
+              <img src="{% static 'website/img/minneapolis/nick-swenson.jpg' %}" alt="Nick Swenson">
               <h4>Nick Swenson</h4>
               <span>
                 Chairman of BCCM Advisors 
@@ -200,7 +200,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
             <div class="member">
-              <img src="{% static 'website/img/minneapolis/michael-yee.jpg' %}" alt="">
+              <img src="{% static 'website/img/minneapolis/michael-yee.jpg' %}" alt="Michael Yee">
               <h4>Michael Yee</h4>
               <span>Chief Operating Officer</span>
               <p>
@@ -218,7 +218,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
             <div class="member">
-              <img src="{% static 'website/img/minneapolis/gary-kohler.jpg' %}" alt="">
+              <img src="{% static 'website/img/minneapolis/gary-kohler.jpg' %}" alt="Gary Kohler">
               <h4>Gary Kohler</h4>
               <span>Chief Investment Officer and Portfolio Manager</span>
               <p>
@@ -236,7 +236,7 @@
           
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
             <div class="member">
-              <img src="{% static 'website/img/minneapolis/fred-steiner.jpg' %}" alt="">
+              <img src="{% static 'website/img/minneapolis/fred-steiner.jpg' %}" alt="Fred Steiner">
               <h4>Fred Steiner, CFA</h4>
               <span>Managing Director, Portfolio Manager</span>
               <p>
@@ -256,7 +256,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
             <div class="member">
-              <img src="{% static 'website/img/evans-mugi.png' %}" alt="">
+              <img src="{% static 'website/img/africafund/evans-mugi.jpg' %}" alt="Evans Mugi">
               <h4>Evans Mugi, CAIA</h4>
               <span>Managing Director of BCCM Advisors (Kenya) Limited</span>
               <p>
@@ -275,7 +275,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
             <div class="member">
-              <img src="{% static 'website/img/minneapolis/manit-rye.jpg' %}" alt="">
+              <img src="{% static 'website/img/minneapolis/manit-rye.jpg' %}" alt="Manit Rye">
               <h4>Manit Rye</h4>
               <span>Risk Management Strategist</span>
               <p>
@@ -293,7 +293,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
             <div class="member">
-              <img src="{% static 'website/img/minneapolis/' %}" alt="">
+              <img src="{% static 'website/img/minneapolis/' %}" alt="Clint Sem">
               <h4>Clint Semm</h4>
               <span>Chief Accounting Officer</span>
               <p>
@@ -314,7 +314,7 @@
         
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
             <div class="member">
-              <img src="{% static 'website/img/minneapolis/' %}" alt="">
+              <img src="{% static 'website/img/minneapolis/' %}" alt="Ben Peyton">
               <h4>Ben Peyton</h4>
               <span>Trader</span>
               <p>
@@ -327,7 +327,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
             <div class="member">
-              <img src="{% static 'website/img/minneapolis/' %}" alt="">
+              <img src="{% static 'website/img/minneapolis/' %}" alt="Prashant Joshi">
               <h4>Prashant Joshi</h4>
               <span>Trading and Risk Analyst</span>
               <p>
