--- a/website/templates/smcap.html
+++ b/website/templates/smcap.html
@@ -127,7 +127,7 @@
         <div class=row>
           <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
             <div class="member">
-              <img src="{% static 'website/img/minneapolis/gary-kohler.jpg' %}" alt="">
+              <img src="{% static 'website/img/minneapolis/gary-kohler.jpg' %}" alt="Gary Kohler">
               <h4>Gary Kohler</h4>
               <span>Chief Investment Officer and Portfolio Manager</span>
               <p>
@@ -145,7 +145,7 @@
 
           <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
             <div class="member">
-              <img src="{% static 'website/img/minneapolis/manit-rye.jpg' %}" alt="">
+              <img src="{% static 'website/img/minneapolis/manit-rye.jpg' %}" alt="Manit Rye">
               <h4>Manit Rye</h4>
               <span>Risk Management Strategist</span>
               <p>
@@ -163,7 +163,7 @@
 
           <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
             <div class="member">
-              <img src="{% static 'website/img/minneapolis/' %}" alt="">
+              <img src="{% static 'website/img/minneapolis/' %}" alt="Ben Peyton">
               <h4>Ben Peyton</h4>
               <span>Trader</span>
               <p> 
@@ -176,7 +176,7 @@
 
           <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
             <div class="member">
-              <img src="{% static 'website/img/minneapolis/' %}" alt="">
+              <img src="{% static 'website/img/minneapolis/' %}" alt="Prashant Joshi">
               <h4>Prashant Joshi</h4>
               <span>Trading and Risk Analyst</span>
               <p>
