--- a/website/templates/africafund.html
+++ b/website/templates/africafund.html
@@ -310,6 +310,27 @@
 
         </div>
           <div class="row">
+
+            <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
+              <div class="member">
+                <img src="{% static 'website/img/minneapolis/fred-steiner.jpg' %}" alt="Fred Steiner">
+                <h4>Fred Steiner, CFA</h4>
+                <span>Managing Director, Portfolio Manager</span>
+                <p>
+                  Fred Steiner is responsible for security selection, risk management and portfolio construction for our Pan-Africa strategy. 
+                  Prior to re-joining BCCM Advisors, Fred earned an MBA from the Carlson School of Management at University of Minnesota where he graduated with distinction and was a Curtis L Carlson Scholarship recipient. 
+                  During the full-time business school program, Fred worked with a multi-family office, Sawmill Management as a Senior Analyst. 
+                  There he oversaw approximately $1 billion in public securities. 
+                  Prior to business school, Fred served as an Analyst and Associate at BCCM and worked in various roles at Signature Financial Partners. 
+                  Fred studied at University of Cape Town in 2008, graduated from Union College in 2009 with a Bachelor’s degree in Economics and Minor in History and is a CFA charterholder. 
+                  Fred is engaged in various charities and previously volunteered for Soccer 4 Hope while living in Cape Town, South Africa in 2010. 
+                </p>
+                <div class="social">
+                  <a href="https://www.linkedin.com/in/fred-steiner-cfa-8731b515/"><i class="icofont-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+
             <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
               <div class="member">
                 <img src="{% static 'website/img/africafund/evans-mugi.jpg' %}" alt="Evans Mugi">
@@ -335,26 +356,6 @@
 
             <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
               <div class="member">
-                <img src="{% static 'website/img/minneapolis/fred-steiner.jpg' %}" alt="Fred Steiner">
-                <h4>Managing Director, Fred Steiner, CFA</h4>
-                <span>Portfolio Manager</span>
-                <p>
-                  Fred Steiner is responsible for security selection, risk management and portfolio construction for our Pan-Africa strategy. 
-                  Prior to re-joining BCCM Advisors, Fred earned an MBA from the Carlson School of Management at University of Minnesota where he graduated with distinction and was a Curtis L Carlson Scholarship recipient. 
-                  During the full-time business school program, Fred worked with a multi-family office, Sawmill Management as a Senior Analyst. 
-                  There he oversaw approximately $1 billion in public securities. 
-                  Prior to business school, Fred served as an Analyst and Associate at BCCM and worked in various roles at Signature Financial Partners. 
-                  Fred studied at University of Cape Town in 2008, graduated from Union College in 2009 with a Bachelor’s degree in Economics and Minor in History and is a CFA charterholder. 
-                  Fred is engaged in various charities and previously volunteered for Soccer 4 Hope while living in Cape Town, South Africa in 2010. 
-                </p>
-                <div class="social">
-                  <a href=""><i class="icofont-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
-              <div class="member">
                 <img src="{% static 'website/img/minneapolis/manit-rye.jpg' %}" alt="">
                 <h4>Manit Rye</h4>
                 <span>Risk Management Strategist</span>
@@ -366,7 +367,7 @@
                   Manit earned a Bachelors of Commerce from Dehli University and holds a Masters in Finance from Claremont Graduate School and UC Berkeley.
                 </p>
                 <div class="social">
-                  <a href=""><i class="icofont-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/in/manit-rye-a8315b33/"><i class="icofont-linkedin"></i></a>
                 </div>
               </div>
             </div>
@@ -383,7 +384,7 @@
                   Prashant earned B.S. in Applied Economics and Business Management from the University of Minnesota
                 </p>
                 <div class="social">
-                  <a href=""><i class="icofont-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/in/prashant-joshi-2019/"><i class="icofont-linkedin"></i></a>
                 </div>
               </div>
             </div>
