--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -193,25 +193,7 @@
                 Nick earned an M.B.A. in Finance from the University of Chicago and a B.A., Magna Cum Laude, Phi Beta Kappa, in History from Middlebury College.
               </p>
               <div class="social">
-                <a href=""><i class="icofont-linkedin"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
-            <div class="member">
-              <img src="{% static 'website/img/minneapolis/michael-yee.jpg' %}" alt="Michael Yee">
-              <h4>Michael Yee</h4>
-              <span>Chief Operating Officer</span>
-              <p>
-                Michael Yee oversees the investment operations of BCCM Advisors and has 20+ years of experience in finance and accounting.  
-                Currently, he manages the day-to-day operations of the management company, middle office and back office duties, treasury functions, accounting and financial reporting, vendor relationships, and investor relations. 
-                Prior to joining BCCM in 2014, Michael served as Fund Controller of Aerwulf Asset Management and Interlachen Capital Group LP. 
-                Before working in the hedge fund industry he worked for Travelers Insurance as a Senior Financial Consultant in the Investment Accounting department. 
-                Michael has Bachelor’s degree in Accounting from the University of St. Thomas. 
-              </p>
-              <div class="social">
-                <a href=""><i class="icofont-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/nick-swenson-976b7337/"><i class="icofont-linkedin"></i></a>
               </div>
             </div>
           </div>
@@ -229,11 +211,11 @@
                 Gary earned an MBA from the Johnson School at Cornell University and a BA in Psychology from the University of Minnesota.
               </p>
               <div class="social">
-                <a href=""><i class="icofont-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/gary-kohler-8001332/"><i class="icofont-linkedin"></i></a>
               </div>
             </div>
           </div>
-          
+
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
             <div class="member">
               <img src="{% static 'website/img/minneapolis/fred-steiner.jpg' %}" alt="Fred Steiner">
@@ -249,7 +231,43 @@
                 Fred is engaged in various charities and previously volunteered for Soccer 4 Hope while living in Cape Town, South Africa in 2010. 
               </p>
               <div class="social">
-                <a href=""><i class="icofont-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/fred-steiner-cfa-8731b515/"><i class="icofont-linkedin"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
+            <div class="member">
+              <img src="{% static 'website/img/minneapolis/michael-yee.jpg' %}" alt="Michael Yee">
+              <h4>Michael Yee</h4>
+              <span>Chief Operating Officer</span>
+              <p>
+                Michael Yee oversees the investment operations of BCCM Advisors and has 20+ years of experience in finance and accounting.  
+                Currently, he manages the day-to-day operations of the management company, middle office and back office duties, treasury functions, accounting and financial reporting, vendor relationships, and investor relations. 
+                Prior to joining BCCM in 2014, Michael served as Fund Controller of Aerwulf Asset Management and Interlachen Capital Group LP. 
+                Before working in the hedge fund industry he worked for Travelers Insurance as a Senior Financial Consultant in the Investment Accounting department. 
+                Michael has Bachelor’s degree in Accounting from the University of St. Thomas. 
+              </p>
+              <div class="social">
+                <a href="https://www.linkedin.com/in/michael-yee-2b34056/"><i class="icofont-linkedin"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
+            <div class="member">
+              <img src="{% static 'website/img/minneapolis/manit-rye.jpg' %}" alt="Manit Rye">
+              <h4>Manit Rye</h4>
+              <span>Risk Management Strategist</span>
+              <p>
+                Manit Rye is responsible for risk management. 
+                Manit has more than 30 years’ experience in structuring and trading yield enhancement and hedging strategies on equities, interest rates, and currencies. 
+                Prior to joining Air T, Inc., Manit was CIO and founder of Asymmetric Capital Management and Thomas Funds Americas LLC and was Managing Director and board member of Merrill Lynch Alternative Investments Inc., where as CO-CIO he focused on investing $10 billion in hedge funds and managed accounts. 
+                Prior to Merrill, Manit held senior roles in emerging market risk management at UBS O’Connor, Goldman Sachs and Citi Bank. 
+                Manit earned a Bachelors of Commerce from Dehli University and holds a Masters in Finance from Claremont Graduate School and UC Berkeley.
+              </p>
+              <div class="social">
+                <a href="https://www.linkedin.com/in/manit-rye-a8315b33/"><i class="icofont-linkedin"></i></a>
               </div>
             </div>
           </div>
@@ -268,25 +286,7 @@
                 Evans is a graduate of the University of Nairobi (2009) and also holds the Chartered Alternative Investment Analyst designation. 
               </p>
               <div class="social">
-                <a href=""><i class="icofont-linkedin"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
-            <div class="member">
-              <img src="{% static 'website/img/minneapolis/manit-rye.jpg' %}" alt="Manit Rye">
-              <h4>Manit Rye</h4>
-              <span>Risk Management Strategist</span>
-              <p>
-                Manit Rye is responsible for risk management. 
-                Manit has more than 30 years’ experience in structuring and trading yield enhancement and hedging strategies on equities, interest rates, and currencies. 
-                Prior to joining Air T, Inc., Manit was CIO and founder of Asymmetric Capital Management and Thomas Funds Americas LLC and was Managing Director and board member of Merrill Lynch Alternative Investments Inc., where as CO-CIO he focused on investing $10 billion in hedge funds and managed accounts. 
-                Prior to Merrill, Manit held senior roles in emerging market risk management at UBS O’Connor, Goldman Sachs and Citi Bank. 
-                Manit earned a Bachelors of Commerce from Dehli University and holds a Masters in Finance from Claremont Graduate School and UC Berkeley.
-              </p>
-              <div class="social">
-                <a href=""><i class="icofont-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/evans-mugi-07541831/"><i class="icofont-linkedin"></i></a>
               </div>
             </div>
           </div>
@@ -337,7 +337,7 @@
                 Prashant earned B.S. in Applied Economics and Business Management from the University of Minnesota
               </p>
               <div class="social">
-                <a href=""><i class="icofont-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/prashant-joshi-2019/"><i class="icofont-linkedin"></i></a>
               </div>
             </div>
           </div>
