--- a/website/templates/smcap.html
+++ b/website/templates/smcap.html
@@ -138,7 +138,7 @@
                 Gary earned an MBA from the Johnson School at Cornell University and a BA in Psychology from the University of Minnesota.
               </p>
               <div class="social">
-                <a href=""><i class="icofont-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/gary-kohler-8001332/"><i class="icofont-linkedin"></i></a>
               </div>
             </div>
           </div>
@@ -156,7 +156,7 @@
                 Manit earned a Bachelors of Commerce from Dehli University and holds a Masters in Finance from Claremont Graduate School and UC Berkeley.
               </p>
               <div class="social">
-                <a href=""><i class="icofont-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/manit-rye-a8315b33/"><i class="icofont-linkedin"></i></a>
               </div>
             </div>
           </div>
@@ -186,7 +186,7 @@
                 Prashant earned B.S. in Applied Economics and Business Management from the University of Minnesota
               </p>
               <div class="social">
-                <a href=""><i class="icofont-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/prashant-joshi-2019/"><i class="icofont-linkedin"></i></a>
               </div>
             </div>
           </div>
